--- a/index.css
+++ b/index.css
@@ -58,6 +58,11 @@ html{
 	transition: 1.5s;
 }
 
+.open,
+.close{
+	display: none;
+}
+
 .nav{
 	display: flex;
 	flex-flow: row wrap;
@@ -92,48 +97,6 @@ html{
 .nav a:hover::after{
 	opacity: 0.8;
 }
-
-
-
-/*nav ul{
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-content: center;
-}
-
-nav ul li{
-	list-style: none;
-}
-
-nav ul li a{
-	position: relative;
-	margin: 0 15px;
-	text-decoration: none;
-	letter-spacing: 2.5px;
-	color: #fff;
-	font-family:'DotGothic16', sans-serif;
-	font-size: 16px;
-	font-weight: 600;
-	text-transform: uppercase;
-}
-
-.nav a::after{
-	content: "";
-	background-color: var(--third-color);
-	position: absolute;
-	left: 0;
-	top: 100%;
-	width: 100%;
-	height: 3px;
-	opacity: 0;
-	transition: 0.3s;
-}
-
-.nav a.selected::after,
-.nav a:hover::after{
-	opacity: 0.8;
-}*/
 
 .portada{
 	position: relative;
