--- a/menu_responsive.css
+++ b/menu_responsive.css
@@ -13,9 +13,9 @@
         top: 0;
         right: 0;
         flex-flow: column nowrap;
-        width: 50%;
-        height: 100vh;
-        align-items: start;
+        width: 100%;
+        height: 50vh;
+        align-items: center;
         background-color: var(--main-color);
         gap: 2rem;
         padding: 20px;
@@ -32,6 +32,20 @@
         top: 0;
         right: 0;
         margin: 25px;
+    }
+
+    #abrir, #cerrar{
+        border: none;
+        background: none;
+        font-size: 25px;
+        color: #fff;
+    }
+
+}
+
+@media screen and (max-width: 500px){
+    .nav{
+        gap: 1rem;
     }
 
 }
