--- a/menu_responsive.css
+++ b/menu_responsive.css
@@ -14,11 +14,11 @@
         right: 0;
         flex-flow: column nowrap;
         width: 100%;
-        height: 50vh;
-        align-items: center;
+        height: 60vh;
+        align-items: start;
         background-color: var(--main-color);
-        gap: 2rem;
-        padding: 20px;
+        gap: 1rem;
+        padding: 0px 50px 0px 50px;
         box-shadow: 0 0 0 1000vmax rgba(0, 0, 0, .5);
     }
 
@@ -43,9 +43,17 @@
 
 }
 
-@media screen and (max-width: 500px){
+@media screen and (min-width: 500px){
     .nav{
-        gap: 1rem;
+        align-items: center;
     }
 
+}
+
+@media screen and (max-height: 640px) and (max-width: 900px){
+    .nav{
+        height: 100vh;
+        width: 50%;
+        align-items: center;
+    }
 }
